workers-deployments/yamls/network-policies.yaml
#Only Prom can read Falcosidekick metrics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: falcosidekick-allow-prometheus-only
  namespace: falco
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: falcosidekick
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 2801
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: falco
      ports:
        - protocol: TCP
          port: 2801
---
# Only prom can read sensors metrics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: telegraf-allow-prometheus-only
  namespace: zone-${ZONE}
spec:
  podSelector:
    matchLabels:
      app: telegraf
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9273
---
# Mosquitto: even if it accepts inbounds data from the sensor an attacker can compromise it to send data outwards
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mosquitto-default-deny-egress
  namespace: zone-${ZONE}
spec:
  podSelector:
    matchLabels:
      app: mosquitto
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
